welcome.lessons.welcome.bat.bool2.CigarParty.scala.error
cigarParty:2: error: not found: value isweekend
  if (isweekend==true) {
      ^