welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if (isweekend==true) {
    if (cigars<40) 
    	return false
    else return true
  }
  else {
    if (cigars<40) 
    	return false
    if (cigars>60)
    	return false
    else return true
  }
}